--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   crypto: ^3.0.2
   image: ^4.0.7
   intl: ^0.17.0
+  ffi: ^2.0.1
+  flutter_rust_bridge: ^1.72.0
+  freezed_annotation: ^2.2.0
 
 flutter_icons:
   windows:
@@ -75,6 +78,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  ffigen: ^7.2.9
+  build_runner: ^2.3.3
+  freezed: ^2.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
